--- a/app/assets/stylesheets/url.css.less
+++ b/app/assets/stylesheets/url.css.less
@@ -3,11 +3,13 @@ p {
     background-color: #56F084;
     border-width: 2px;
     border-color: #1FF25F;
+    height: 40px;
   }
 
   &.error {
     background-color: #F76A6A;
     border-width: 2px;
-   border-color: #F21F1F;
+    border-color: #F21F1F;
+    height: 40px;
   }
 }
