Altered view to show linked url and make it clickable

--- a/app/views/urls/_table_results.html.haml
+++ b/app/views/urls/_table_results.html.haml
@@ -11,4 +11,5 @@
             %td
               = r.full_url
             %td
-              = r.hashed_url
+              %a{:href => "http://#{site_name}/#{r.hashed_url}"}
+                = r.hashed_url
