Changed up the href for the table structure

--- a/app/views/urls/_table_results.html.haml
+++ b/app/views/urls/_table_results.html.haml
@@ -11,5 +11,5 @@
             %td
               = r.full_url
             %td
-              %a{:href => "http://#{site_name}/#{r.hashed_url}"}
+              %a{:href => root_path + r.hashed_url}
                 = r.hashed_url
