Modified edit template

--- a/app/views/urls/edit.html.haml
+++ b/app/views/urls/edit.html.haml
@@ -1,12 +1,11 @@
 .row
-  %h1
-    Editing
-    = @record.hashed_url
-.row
   .span8.offset4
-    = form_tag urls_path, :method => "post" do
-      = text_field_tag :url, nil, :placeholder => "Enter URL here (required)", :class => "input-xlarge"
+    %h1
+      Editing
+      = @record.hashed_url
+    = form_tag urls_path, :method => "put" do
+      = text_field_tag :url, nil, :value => @record.full_url, :class => "input-xlarge"
       %br
-      = text_field_tag :custom_url, nil, :placeholder => "Custom URL (optional)", :class => "input-xlarge"
+      = text_field_tag :custom_url, nil, :value => @record.hashed_url, :class => "input-xlarge"
       %br
       = submit_tag "Update!", :id => "submit-url-btn", :class => "btn"
