--- a/app/views/urls/edit.html.haml
+++ b/app/views/urls/edit.html.haml
@@ -1,13 +1,14 @@
 .row
   %h1
-    Delete
+    Edit
     %em
       ==#{@record.hashed_url}?
   .well.span4
-    = form_tag urls_path, :method => "post" do
+    = form_tag url_path, :method => :put do
       = text_field_tag :url, nil, :value => @record.full_url, :class => "input-xlarge"
       %br
-      = text_field_tag :custom_url, nil, :value => @record.hashed_url, :class => "input-xlarge"
+      = text_field_tag :custom_url, nil, :value => @record.hashed_url, :class => "input-xlarge", :disabled => true
       %br
       = hidden_field_tag :admin_hash, @record.admin_hash
-      = link_to "Delete!", @record, :id => "delete-url-btn", :class => "btn btn-large btn-danger", :method => :delete
+      = submit_tag "Update", :id => "update-url-btn", :class => "btn btn-large btn-info"
+      = link_to "Delete", @record, :id => "delete-url-btn", :class => "btn btn-large btn-danger", :method => :delete
