Update to rails 3.2.17 and bootstrap3

--- a/app/assets/stylesheets/url.css.less
+++ b/app/assets/stylesheets/url.css.less
@@ -14,10 +14,10 @@ p {
   }
 }
 
-input#url {
-  height: 35px;
+#submit-url-btn {
+  height: 60px;
 }
 
-input#custom_url {
-  height: 35px;
+#header {
+  padding-bottom: 25px;
 }
