--- a/app/views/urls/edit.html.haml
+++ b/app/views/urls/edit.html.haml
@@ -1,14 +1,17 @@
-.row
-  %h1
-    Edit
-    %em
-      ==#{@record.hashed_url}?
-  .well.span4
-    = form_tag url_path, :method => :put do
-      = text_field_tag :url, nil, :value => @record.full_url, :class => "input-xlarge"
-      %br
-      = text_field_tag :custom_url, nil, :value => @record.hashed_url, :class => "input-xlarge", :disabled => true
-      %br
-      = hidden_field_tag :admin_hash, @record.admin_hash
-      = submit_tag "Update", :id => "update-url-btn", :class => "btn btn-large btn-info"
-      = link_to "Delete", @record, :id => "delete-url-btn", :class => "btn btn-large btn-danger", :method => :delete
+.col-xs-12.col-md-12
+  .row
+    %h1
+      Edit
+      %em
+        ==#{@record.hashed_url}?
+    .well.col-xs-12.col-md-6.col-md-offset-3
+      = form_tag url_path, :method => :put, :class => "form-horizontal", :role => "role" do
+        .form-group
+          .col-xs-12.col-md-12
+            = text_field_tag :url, nil, :value => @record.full_url, :class => "input-lg form-control"
+        .form-group
+          .col-xs-12.col-md-12
+            = text_field_tag :custom_url, nil, :value => @record.hashed_url, :class => "input-lg form-control", :disabled => true
+        = hidden_field_tag :admin_hash, @record.admin_hash
+        = submit_tag "Update", :id => "update-url-btn", :class => "btn btn-lg btn-info col-xs-6"
+        = link_to "Delete", @record, :id => "delete-url-btn", :class => "btn btn-lg btn-danger col-xs-6", :method => :delete
